# reactML

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: plot_reactPaths.ipynb  plot_reactPaths_wb97.ipynb  run_TS.py  run_opt.py  run_thermo.py  test_pyscf_Hessian.ipynb
scripts/carbon_capture/: gpu4pyscf-script.py  pcm_eps.txt  read_ase_traj.py  run_cc.py  run_mace.py  run_neb.py  run_pyscf.py  run_ts.py
scripts/crn_scripts/: 1-FFopt-SP.py  2-create-mol-json.py  4-compute_recombine.py  create_json.py  create_reaction.py  rxn_enum.py  update_json.py
scripts/pyscf_scripts/: create_vib.py  read_ase_traj.py  run_autoneb.py  run_gsm.py  run_mace.py  run_mlff.py  run_neb.py  run_pyscf.py
scripts/qchem_scripts/: 3-fragment-recombine.py  5-create-json.py
src/reactML/common/: ase_interface.py  ase_pyscf.py  finite_diff_gpu.py  pyscf2ase.py  topology.py  utils.py
src/reactML/crn_utils/: calculate_quantities.py  calculate_recombination_quantities.py  calculate_recombinations.py  create_json.py  create_mol_json.py  create_monoatomic_json.py  fmt_convert.py  frag_recomb.py  frag_recombine.py  fragmentation_recombination.py  generate_fragmentation_recombination.py  json_data.py  mrnet_utils.py  qrrho.py  rrho_shifted.py  utils.py
