[project]
name = "reactml"
version = "0.1.0"
authors = [
    { name = "Peichen Zhong" },
    { name = "Yicheng Chen" }
]
readme = "README.md"
requires-python = ">=3.9"
urls = { "Homepage" = "https://github.com/zhongpc/reactml" }
dependencies = [
    "ase>=3.26.0",
    "pymatgen>=2024.8.9",
    "pyyaml>=6.0.3",
]
[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
